@@ -1,3 +1,13 @@
+2005-01-04  Angus Leeming  <leeming@lyx.org>
+
+	* FileInfo.C (FileInfo, newFile): strip the trailing '/' from
+	the stored file name as it breaks Window's version of stat().
+	(isLink): protect the code with #ifdef S_ISLNK.
+	(dostat): protect the code with #ifdef HAVE_LSTAT.
+
+	* filetools.C (LyXReadLink): protect the code with
+	#ifdef HAVE_READLINK.
+
 2005-01-01  Kayvan Sylvan  <kayvan@sylvan.com>
 
 	* os_win32.C (internal_path): remove the call to MakeLatexName as
