@@ -1,3 +1,8 @@
+2005-01-04  Angus Leeming  <leeming@lyx.org>
+
+	* configure.ac, configure.in (AC_CHECK_FUNCS): test for the
+	existence of lstat and readlink.
+
 2004-12-16  Angus Leeming  <leeming@lyx.org>
 
 	* configure.ac: remove the HAVE_MKDIR conditional code to
